--- a/IphoneTest/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/IphoneTest/en.lproj/MainStoryboard_iPhone.storyboard
@@ -88,6 +88,29 @@
             </objects>
             <point key="canvasLocation" x="360" y="476"/>
         </scene>
+        <scene sceneID="tua-hb-BzJ">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8f3-im-8wv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="MSL-ub-wSy" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zLI-zl-eVy">
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="gIr-G4-uAJ">
+                                <rect key="frame" x="52" y="42" width="207" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="First"/>
+                                    <segment title="Second"/>
+                                </segments>
+                            </segmentedControl>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="364" y="1140"/>
+        </scene>
     </scenes>
     <classes>
         <class className="DataViewController" superclassName="UIViewController">
